opam-version: "1.2"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "https://github.com/rizo/primitives"
license: "ISC"
dev-repo: "https://github.com/rizo/primitives.git"
bug-reports: "https://github.com/rizo/primitives/issues"
doc: "https://rizo.github.io/primitives/"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build}
]

available: [
  ocaml-version >= "4.02.3"
]
